<resources>

    <string name="app_full_version_package">com.kevinhinds.timer</string>
    <string name="app_name">Gourmet Timer</string>
    <string name="app_publisher_name">Kevin Hinds</string>
    <string name="app_publisher_package">com.kevinhinds</string>
    <string name="Back">Back</string>
    <string name="Cancel">Cancel</string>
    <string name="CreateEdit_Preset">Create/Edit Preset</string>
    <string name="CurrentlySetTIme">Currently Set Time:</string>
    <string name="DefaultTimerName">00:15:00 Timer</string>
    <string name="Delete">Delete</string>
    <string name="device_nook_ean_number">9999999999999</string>
    <string name="Hint_Title">Title [Ham, Potatoes]</string>
    <string name="Hours">Hours</string>
    <string name="is_full_version">true</string>
    <string name="latest_update_example">Latest Updates\n\nItem #1\nItem #2\n\nThanks for downloading!</string>
    <string name="latest_update_notes">Latest Updates:\n\nNew Improved Sounds and Images\n\nThanks for downloading!</string>
    <string name="lessThan">&lt;</string>
    <string name="marketplace_name"></string>
    <string name="menu_bitstreet">Bitstreet Apps</string>
    <string name="menu_fullversion">Get the Full Version!</string>
    <string name="menu_settings">Settings</string>
    <string name="minus1">- 1</string>
    <string name="minus5">- 5</string>
    <string name="Minutes">Minutes</string>
    <string name="play_sound">Clicking</string>
    <string name="plus1">+ 1</string>
    <string name="plus5">+ 5</string>
    <string name="Presets">Presets</string>
    <string name="SelectFromRecipe">Select from Recipe</string>
    <string name="SelectPreset">Select from Preset</string>
    <string name="Select">Select</string>
    <string name="set">Set</string>
    <string name="Set_Timer">Set Timer</string>
    <string name="Set_Time">Set Time</string>
    <string name="Setup_TImer">Save &amp; Setup New Timer</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="SuggestedTime">Suggested Time:</string>
    <string name="title_activity_timer">Gourmet Timer</string>
    <string name="zero">00:15:00</string>
    <string name="zeroInt">0</string>

    <string-array name="assetFilesArray">
        <item>Beef, Pork, Lamb, Mutton, Veal</item>
        <item>Bread, Pastries, Puddings</item>
        <item>Game and Poultry</item>
        <item>Sea Foods</item>
        <item>Vegetables</item>
    </string-array>

</resources>
